@@ -1,3 +1,7 @@
+2007-09-10  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh: (CygbuildCmdInstallCheckSymlinks); New.
+
 2007-09-07  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh:
